assets/SASS/pages/pages.scss
.page {
  background-image:
          url(../images/Header.png),
          url(../images/Footer.png);
  background-position:
          top right,
          bottom left;
  background-size: 80% auto, contain;
  background-repeat: no-repeat;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  &.rightBg {
    background-image:
            url(../images/Header.png),
            url(../images/Left_Element.png),
            url(../images/Footer.png);
    background-position:
            top right,
            top 60% right,
            bottom left;
    background-size: auto 140px, 10% auto, auto 400px;
    @media (min-width: 768px) {
      background-size: 70% auto, 10% auto, auto 400px;
    }
    @media (min-width: 1280px) {
      background-size: 70% auto, 150px auto, 80% auto;
    }

    main {
      padding-right: 10%;
    }
  }
  &.leftBg {
    background-image:
            url(../images/Header.png),
            url(../images/Right_Element.png),
            url(../images/Footer.png);
    background-position:
            top right,
            top 40% left,
            bottom left;
    background-size: auto 140px, 10% auto, auto 400px;
    @media (min-width: 768px) {
      background-size: 70% auto, 10% auto, auto 400px;
    }
    @media (min-width: 1280px) {
      background-size: 70% auto, 120px auto, 80% auto;
    }
    main {
      padding-left: 10%;
    }
  }
  &.rightLeftBg {
    background-image:
            url(../images/Header.png),
            url(../images/Right_Element.png),
            url(../images/Left_Element.png),
            url(../images/Footer.png);
    background-position:
            top right,
            top 30% left,
            top 60% right,
            bottom left;
    background-size: auto 140px, 10% auto, 10% auto, auto 400px;
    @media (min-width: 768px) {
      background-size: 70% auto, 10% auto, 10% auto, auto 400px;
    }
    @media (min-width: 1280px) {
      background-size: 70% auto, 120px auto, 150px auto, 80% auto;
    }
    main {
      padding-left: 10%;
      padding-right: 10%;
    }
  }
}

.block-left {
  max-width: 780px;
  width: 100%;
}

.block-center {
  max-width: 840px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.block-right {
  max-width: 780px;
  margin-left: auto;
  width: 100%;
}

